name:             stringbuilder
description:      A monadic builder for multi-line string literals
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       simon.hengel@wiktory.org
build-type:       Simple
cabal-version:    >= 1.2

library
  ghc-options:     -Wall
  hs-source-dirs:  src
  exposed-modules: Data.String.Builder
  build-depends:
      base
    , transformers
