name:             stringbuilder
description:      A monadic builder for multi-line string literals
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.2

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base
    , transformers
  exposed-modules:
      Data.String.Builder
