name:             stringbuilder
description:      A monadic builder for multi-line string literals
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.2

source-repository head
  type: git
  location: https://github.com/sol/stringbuilder

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base
    , transformers
  exposed-modules:
      Data.String.Builder

test-suite spec
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  build-depends:
      base
    , transformers
    , hspec-shouldbe
